--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "dev": "webpack -d"
   },
-  "dependencies": {},
+  "dependencies": {
+    "react": "15.6.1",
+    "react-dom": "15.6.1"
+  },
   "devDependencies": {
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
