--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "babel-loader": "7.1.2",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
+    "css-loader": "0.28.7",
+    "file-loader": "0.11.2",
+    "image-webpack-loader": "3.4.0",
     "webpack": "2.6.1"
   }
 }
