--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Nikolai <nick22783@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack -d"
+    "dev": "webpack -d --watch"
   },
   "dependencies": {
     "react": "15.6.1",
@@ -19,6 +19,7 @@
     "css-loader": "0.28.7",
     "file-loader": "0.11.2",
     "image-webpack-loader": "3.4.0",
+    "style-loader": "0.18.2",
     "webpack": "2.6.1"
   }
 }
