--- a/package.json
+++ b/package.json
@@ -12,16 +12,14 @@
     "react-dom": "15.6.1"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.7",
-    "file-loader": "^0.11.2",
-    "image-webpack-loader": "^3.4.0",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "css-loader": "0.28.7",
+    "file-loader": "0.11.2",
+    "image-webpack-loader": "3.4.0",
+    "style-loader": "0.18.2",
     "webpack": "2.6.1"
   }
 }
