--- a/package.json
+++ b/package.json
@@ -1,25 +1,33 @@
 {
-  "name": "webpack-for-react--linkein-alexandru-toea",
+  "name": "my_reads",
   "version": "1.0.0",
+  "description": "simple book shelf app",
   "main": "index.js",
-  "author": "Nikolai <nick22783@gmail.com>",
-  "license": "MIT",
   "scripts": {
-    "dev": "webpack -d --watch"
+    "dev": "webpack-dev-server",
+    "http-server": "http-server dist/",
+    "build": "webpack -p"
   },
   "dependencies": {
-    "react": "15.6.1",
-    "react-dom": "15.6.1"
+    "bundle-loader": "^0.5.5",
+    "http-server": "^0.10.0",
+    "prop-types": "^15.5.10",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-router-dom": "^4.1.2"
   },
   "devDependencies": {
-    "babel-core": "6.26.0",
-    "babel-loader": "7.1.2",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-react": "6.24.1",
-    "css-loader": "0.28.7",
-    "file-loader": "0.11.2",
-    "image-webpack-loader": "3.4.0",
-    "style-loader": "0.18.2",
-    "webpack": "2.6.1"
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "css-loader": "^0.28.4",
+    "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^2.30.1",
+    "image-webpack-loader": "^3.3.1",
+    "style-loader": "^0.18.2",
+    "webpack": "2.6.1",
+    "webpack-dev-server": "^2.7.1"
   }
 }
