--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "simple book shelf app",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server",
+    "dev": "webpack -d --watch",
+    "dev-server": "webpack-dev-server",
     "http-server": "http-server dist/",
     "build": "webpack -p"
   },
   "dependencies": {
     "bundle-loader": "^0.5.5",
-    "http-server": "^0.10.0",
+    "http-server": "0.10.0",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
