--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-loadable": "4.0.5",
     "react-router-dom": "^4.1.2",
     "rimraf": "2.6.1"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
+    "babel-plugin-syntax-dynamic-import": "6.18.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
